# nfe-automator

./: .gitignore  README.md  config.example.py  config_manager.py  constants.py  data_models.py  driver_manager.py  fazer_commits.py  fluxo_utils.py  install.bat  main.py  pyproject.toml  requirements.txt  retry_manager.py  sefaz_automator.py
dados/: empresas.xlsx
docs/: troubleshooting.md
estado/: processamento_empresas.json
src/: __init__.py
src/automacao/: __init__.py  download_manager.py  driver_manager.py  fluxo_utils.py  health_check.py  ie_loader.py  ie_processor.py  iframe_manager.py  multi_ie_manager.py  processador_ie.py  retry_manager.py  sefaz_automator.py  timeout_manager.py  validador_ie.py
src/config/: __init__.py  config_manager.py  constants.py
src/utils/: __init__.py  data_models.py  login_helper.py
