[project]
name = "nfe-automator"
version = "1.0.0"
description = "Automação para download de XMLs NFe da SEFAZ Goiás"
authors = [
    {name = "Guilherme Duarte", email = "comercial9323@gmail.com"},
]
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']